# backtester

./: .gitignore  CMakeLists.txt  sample_data.csv
.cache/clangd/index/: DataFeed.cpp.9291D4070FA14AED.idx  DataFeed.hpp.39642FC1CD76B17C.idx  DataTypes.hpp.6F1FDE320AFDFD3A.idx  ExecutionHandler.cpp.1549FDA87183BF86.idx  ExecutionHandler.hpp.C61A44819BED55D6.idx  MovingAverageCrossover.cpp.4B4DC909167CFAE6.idx  MovingAverageCrossover.hpp.39EBD5EBA3377C4F.idx  OrderManager.cpp.CB2B49535723A650.idx  OrderManager.hpp.EE191A811D9574F2.idx  Strategy.hpp.2FEB10867A998A1E.idx  main.cpp.11303BCF239D6272.idx
include/: DataFeed.hpp  DataTypes.hpp  ExecutionHandler.hpp  OrderManager.hpp  Strategy.hpp
include/strategies/: MovingAverageCrossover.hpp
src/: DataFeed.cpp  ExecutionHandler.cpp  OrderManager.cpp  main.cpp
src/strategies/: MovingAverageCrossover.cpp
